logs/robotframework-eyes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/RobotEyes'...
Compiling './lib/python3.5/site-packages/RobotEyes/__init__.py'...
***   File "./lib/python3.5/site-packages/RobotEyes/__init__.py", line 53
    print 'Capturing page...'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RobotEyes/report_generator.py'...
***   File "./lib/python3.5/site-packages/RobotEyes/report_generator.py", line 131
    print "Creating visual report at %s/visualReport.html" % root_folder
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Selenium2Library'...
Listing './lib/python3.5/site-packages/SeleniumLibrary'...
Listing './lib/python3.5/site-packages/SeleniumLibrary/base'...
Listing './lib/python3.5/site-packages/SeleniumLibrary/keywords'...
Listing './lib/python3.5/site-packages/SeleniumLibrary/locators'...
Listing './lib/python3.5/site-packages/SeleniumLibrary/utils'...
Listing './lib/python3.5/site-packages/SeleniumLibrary/utils/events'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robot'...
Listing './lib/python3.5/site-packages/robot/api'...
Listing './lib/python3.5/site-packages/robot/conf'...
Listing './lib/python3.5/site-packages/robot/htmldata'...
Listing './lib/python3.5/site-packages/robot/htmldata/common'...
Listing './lib/python3.5/site-packages/robot/htmldata/lib'...
Listing './lib/python3.5/site-packages/robot/htmldata/libdoc'...
Listing './lib/python3.5/site-packages/robot/htmldata/rebot'...
Listing './lib/python3.5/site-packages/robot/htmldata/testdoc'...
Listing './lib/python3.5/site-packages/robot/libdocpkg'...
Listing './lib/python3.5/site-packages/robot/libraries'...
Listing './lib/python3.5/site-packages/robot/model'...
Listing './lib/python3.5/site-packages/robot/output'...
Listing './lib/python3.5/site-packages/robot/output/console'...
Listing './lib/python3.5/site-packages/robot/parsing'...
Listing './lib/python3.5/site-packages/robot/reporting'...
Listing './lib/python3.5/site-packages/robot/result'...
Listing './lib/python3.5/site-packages/robot/running'...
Listing './lib/python3.5/site-packages/robot/running/arguments'...
Listing './lib/python3.5/site-packages/robot/running/timeouts'...
Compiling './lib/python3.5/site-packages/robot/running/timeouts/ironpython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/ironpython.py", line 56
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robot/running/timeouts/jython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/jython.py", line 55
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robot/utils'...
Listing './lib/python3.5/site-packages/robot/variables'...
Listing './lib/python3.5/site-packages/robot/writer'...
Listing './lib/python3.5/site-packages/robotframework-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/robotframework_eyes-0.45.egg-info'...
Listing './lib/python3.5/site-packages/robotframework_selenium2library-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robotframework_seleniumlibrary-3.0.1.dist-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
